Bug 82413 - Formatting of fields in the databrowser of a form crashes LO immedialtely
Summary: Formatting of fields in the databrowser of a form crashes LO immedialtely
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.3.0.3 rc
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0 target:4.3.1
Keywords: bibisectRequest, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2014-08-10 07:24 UTC by Robert Großkopf
Modified: 2015-12-17 08:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Error-Message for the crash, when chosing "Column Format" of the browsed table. (130.68 KB, text/plain)
2014-08-10 07:24 UTC, Robert Großkopf
Details
console_bt with master sources (7.98 KB, text/plain)
2014-08-10 07:42 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2014-08-10 07:24:52 UTC
Created attachment 104372 [details]
Error-Message for the crash, when chosing "Column Format" of the browsed table.

Open https://bugs.freedesktop.org/attachment.cgi?id=104369.
Open the form.
Chose "Datasource as Table" in the navigationbar (button in the right down corner of the form).
Click with the mouse on the header of one field of the shown table. There could be chosen "Column Format".
LO 4.3.0.3 and 4.3.0.4 crash immediately after chosing the dialog.

Haven't installed 4.3.0.2. With 4.3.0.1 the dialog appears. Seems it has been designed new for 4.3. But: The dialog doesn't work in 4.3.0.1
Comment 1 Julien Nabet 2014-08-10 07:42:33 UTC
Created attachment 104374 [details]
console_bt with master sources

On pc Debian x86-64 with master sources updated today, I could reproduce the crash.
Comment 2 Julien Nabet 2014-08-10 07:44:07 UTC
For the record, it works well with LO Debian package 4.2.6.
Comment 3 Julien Nabet 2014-08-10 08:48:37 UTC
With keyId interface, the ui part used here is:
sbagrid.src RID_SBA_GRID_COLCTXMENU ID_BROWSER_COLUMNINFO
Comment 4 Julien Nabet 2014-08-10 09:34:33 UTC
BTW, the bug can be reproduced without choosing "Datasource as Table" and use the data already present.
Comment 5 Julien Nabet 2014-08-10 10:33:12 UTC
Caolan: I noticed the UI conv (see http://cgit.freedesktop.org/libreoffice/core/commit/?id=3a806d027cb744cde08e0c4472bec5159d5a541d) but don't see anything wrong so suppose it's elsewhere. Any idea?
Comment 6 Commit Notification 2014-08-12 08:03:46 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e2d2fa4f0663cf990c0595f8827ff9123c88d41a

Resolves: fdo#82413 crash in format->column



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-08-12 08:30:02 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2c57f8b716a5e8e378ac4fe85ef1d62a4fc65dce&h=libreoffice-4-3

Resolves: fdo#82413 crash in format->column


It will be available in LibreOffice 4.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-08-13 15:40:37 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7829f390995c663a7d7d9c14def46f0de70e2598&h=libreoffice-4-3-1

Resolves: fdo#82413 crash in format->column


It will be available already in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Robinson Tryon (qubit) 2015-12-17 08:29:45 UTC
Migrating Whiteboard tags to Keywords: (bibisectRequest)
[NinjaEdit]