Resolves: fdo#82413 crash in format->column

Change-Id: I3af776c14ec0f224884488fdc99ee26ebbba7cb8
(cherry picked from commit e2d2fa4f0663cf990c0595f8827ff9123c88d41a)
Reviewed-on: https://gerrit.libreoffice.org/10876
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>